crates/backyard-lexer/tests/snapshots/keywords__abstract_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Abstract
  value:
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
  line: 1
  column: 0
  offset: 0
