crates/backyard-lexer/tests/snapshots/keywords__and_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 236
expression: tokens
snapshot_kind: text
---
- token_type: And
  value: and
  line: 1
  column: 0
  offset: 0
