crates/backyard-lexer/tests/snapshots/keywords__array_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 11
expression: tokens
snapshot_kind: text
---
- token_type: Array
  value: array
  line: 1
  column: 0
  offset: 0
