crates/backyard-lexer/tests/snapshots/keywords__as_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: As
  value:
    - 97
    - 115
  line: 1
  column: 0
  offset: 0
