crates/backyard-lexer/tests/snapshots/keywords__break_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 21
expression: tokens
snapshot_kind: text
---
- token_type: Break
  value: break
  line: 1
  column: 0
  offset: 0
