crates/backyard-lexer/tests/snapshots/keywords__callable_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Callable
  value:
    - 99
    - 97
    - 108
    - 108
    - 97
    - 98
    - 108
    - 101
  line: 1
  column: 0
  offset: 0
