crates/backyard-lexer/tests/snapshots/keywords__case_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 31
expression: tokens
snapshot_kind: text
---
- token_type: Case
  value: case
  line: 1
  column: 0
  offset: 0
