crates/backyard-lexer/tests/snapshots/keywords__catch_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Catch
  value:
    - 99
    - 97
    - 116
    - 99
    - 104
  line: 1
  column: 0
  offset: 0
