crates/backyard-lexer/tests/snapshots/keywords__class_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 41
expression: tokens
snapshot_kind: text
---
- token_type: Class
  value: class
  line: 1
  column: 0
  offset: 0
