crates/backyard-lexer/tests/snapshots/keywords__clone_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Clone
  value:
    - 99
    - 108
    - 111
    - 110
    - 101
  line: 1
  column: 0
  offset: 0
