crates/backyard-lexer/tests/snapshots/keywords__const_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 51
expression: tokens
snapshot_kind: text
---
- token_type: Const
  value: const
  line: 1
  column: 0
  offset: 0
