crates/backyard-lexer/tests/snapshots/keywords__continue_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Continue
  value:
    - 99
    - 111
    - 110
    - 116
    - 105
    - 110
    - 117
    - 101
  line: 1
  column: 0
  offset: 0
